# GLauncher

./: CMakeLists.txt  build.bat
lib/: GLauncher.exp
src/launcher/: CMakeLists.txt  IConfig.h.in  icon.h  icon.rc
